Worked on Sonar issues